[package]
name = "fievar"
version = "0.1.0"
edition = "2021"
authors = ["Sachin Charakhwal <sachincharakhwal@gmail.com>"]
license = "MIT"
repository = "https://github.com/SCJangra/fievar"
readme = "README.md"
description = "Proc macrs to generate functions that return static slices of struct field names or enum variant names."
documentation = "https://docs.rs/fievar"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["derive", "parsing"] }
quote = "1.0"
proc-macro-error = "1.0"
